--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Auto Swagger Token Refresher",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Автообновление Bearer токена и подстановка в Swagger UI для выбранных микросервисов.",
-  "permissions": ["storage", "tabs", "scripting", "activeTab", "alarms"],
+  "permissions": ["storage", "tabs", "scripting", "activeTab", "alarms", "notifications"],
   "host_permissions": ["http://*/*", "https://*/*"],
   "background": {
     "service_worker": "src/background.js",
